--- a/README
+++ b/README
@@ -27,6 +27,7 @@ TODO:
         Importing maps
         Compressed maps
         Game modes
+        Key Mapping
         Comments on the code
         Code Modularity
 
